# randall

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  Randall.sln  TARGET_RUNTIME_README.txt
campaigns/: lab-smoke.yaml  nightly-lab.yaml
docs/: AI_CODE_FUZZ.md  AI_LAB.md  AI_SEED.md  ARCHITECTURE.md  AUTOPILOT.md  BENCHMARKS.md  BOOFUZZ_PARITY.md  BUG_HUNTER.md  CASE_BUILDER.md  CRASH_ANALYSIS.md  CRASH_LOGGING.md  CUSTOM_TARGETS.md  DEFENSE_LAB.md  DRONE_LAB.md  ENGINE_ADAPTERS.md  EXAMPLES.md  EXECUTION_LOGGING.md  EXPLOIT_GUIDE.md  FUZZING.md  GHIDRA_INTEGRATION.md  HARNESS_DESIGN.md  HOWTO_STALK_GENERIC_APP.md  HOWTO_STALK_IDA_GHIDRA.md  INSTALL_LINUX.md  INSTALL_WINDOWS.md  IN_PROCESS.md  LAB_AGENT.md  LAB_LIBRARY.md  LAB_PRACTICE.md  LEGS.md  LORE.md  MAGICIAN.md  MATURITY.md  MINI_TIMELINE.md  MITIGATION_LAB.md  MODEL.md  MQTT_LAB.md  NOTIFICATIONS.md  ORACLES.md  PERSISTENT.md  (+18 more)
examples/: README.md
plugins/: README.md
projects/: aflpp-harness.yaml  ai-badcode-hunt.yaml  cfpass.yaml  dns-lab.yaml  file-framed.yaml  file-text.yaml  forksrv-demo.yaml  harness-demo.yaml  joker-smoke.yaml  netcat.yaml  notepadpp.yaml  reeldeck.yaml  screamcrash.yaml  udp-datagram.yaml  vulnai.yaml  vulndrone-tcp.yaml  vulndrone-udp.yaml  vulnftp.yaml  vulnhttp.yaml  vulnlab-offset.yaml  vulnlab-x86.yaml  vulnlab.yaml  vulnmqtt.yaml  vulnrobot-udp.yaml  vulnrobot.yaml  vulnrobotio.yaml  vulnrosbus.yaml  (+10 more)
tools/randfuzzdbg/: CMakeLists.txt  README.md
tools/randfuzzdbg/scripts/: rf_load.txt  rf_walk.txt
tools/randfuzzdbg/src/: RandfuzzDbg.cpp  RandfuzzDbg.def
(+492 files in other folders)
